After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 643940 - gnome-rr.c uses xrandr code even if HAVE_RANDR is undefined
gnome-rr.c uses xrandr code even if HAVE_RANDR is undefined
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: libgnome-desktop
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Federico Mena Quintero
Desktop Maintainers
: 646116 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-03-05 11:44 UTC by Metztli IT
Modified: 2011-03-30 18:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bgo#643940 - Don't build some RANDR code if RANDR is not available (1018 bytes, patch)
2011-03-07 18:44 UTC, Federico Mena Quintero
none Details | Review
bgo#643940 - Include gdkx.h so we can build when RANDR is not available (1009 bytes, patch)
2011-03-29 17:11 UTC, Federico Mena Quintero
none Details | Review
bgo#643940 - Include Xlib.h so we can build when RANDR is not available (1009 bytes, patch)
2011-03-29 21:44 UTC, Federico Mena Quintero
committed Details | Review

Description Metztli IT 2011-03-05 11:44:52 UTC
Building in dual 600MHz CPUs Intel mobo where GNU/Linux Debian 6.0 has been installed on purpose to build GNOME 3.0. I have followed the instructions on: http://library.gnome.org/devel/jhbuild/stable/getting-started.html.en 

Below are the tails of log files --as well as an explanation of the procedures followed to "go around" those initial 3 errors. The 4 error (compile gnome-desktop) blocked everything - can not go beyond.

cc1: warnings being treated as errors
plugin.c: In function ‘SCPluginIfupdown_init’:
plugin.c:463: error: implicit declaration of function ‘nm_info’
plugin.c: In function ‘update_system_hostname’:
plugin.c:598: error: implicit declaration of function ‘nm_warning’
At top level:
cc1: error: unrecognized command line option "-Wno-unused-but-set-variable"
make[8]: *** [libnm_settings_plugin_ifupdown_la-plugin.lo] Error 1
make[8]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src/settings/plugins/ifupdown'
make[7]: *** [all-recursive] Error 1
make[7]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src/settings/plugins/ifupdown'
make[6]: *** [all-recursive] Error 1
make[6]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src/settings/plugins'
make[5]: *** [all-recursive] Error 1
make[5]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src/settings'
make[4]: *** [all] Error 2
make[4]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src/settings'
make[3]: *** [all-recursive] Error 1
make[3]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src'
make[2]: *** [all] Error 2
make[2]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/myHome/checkout/gnome/NetworkManager'
make: *** [all] Error 2
make
^[[1m*** Error during phase build of NetworkManager: ########## Error running make   *** [34/208]^[(B^[[m
^[]0;jhbuild:Error during phase build of NetworkManager: ########## Error running make   [34/208]
---------------------------------------------------------------------------------------------------------

Selected: [2] Ignore error and continue to install

--------------------------------------------------------------------------------------------------------------

cc1: warnings being treated as errors
plugin.c: In function ‘SCPluginIfupdown_init’:
plugin.c:463: error: implicit declaration of function ‘nm_info’
plugin.c: In function ‘update_system_hostname’:
plugin.c:598: error: implicit declaration of function ‘nm_warning’
At top level:
cc1: error: unrecognized command line option "-Wno-unused-but-set-variable"
make[7]: *** [libnm_settings_plugin_ifupdown_la-plugin.lo] Error 1
make[7]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src/settings/plugins/ifupdown'
make[6]: *** [install-recursive] Error 1
make[6]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src/settings/plugins/ifupdown'
make[5]: *** [install-recursive] Error 1
make[5]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src/settings/plugins'
make[4]: *** [install-recursive] Error 1
make[4]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src/settings'
make[3]: *** [install] Error 2
make[3]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src/settings'
make[2]: *** [install-recursive] Error 1
make[2]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src'
make[1]: *** [install] Error 2
make[1]: Leaving directory `/myHome/checkout/gnome/NetworkManager/src'
make: *** [install-recursive] Error 1
make install 
^[[1m*** Error during phase install of NetworkManager: ########## Error running make install *** [34/208]^[(B^[[m
^[]0;jhbuild:Error during phase install of NetworkManager: ########## Error running make install [34/208]^G
---------------------------------------------------------------------------------------------------------------------

Selected: [2] Ignore error and continue to install

--------------------------------------------------------------------------------------------------------------

drbg.c:510: error: size of array ‘arg’ is negative
drbg.c:513: warning: large integer implicitly truncated to unsigned type
make[4]: *** [Linux2.6_x86_glibc_PTH_OPT.OBJ/Linux_SINGLE_SHLIB/drbg.o] Error 1
make[4]: Leaving directory `/myHome/checkout/gnome/nss-3.12.6/mozilla/security/nss/lib/freebl'
make[3]: *** [libs] Error 2
make[3]: Leaving directory `/myHome/checkout/gnome/nss-3.12.6/mozilla/security/nss/lib/freebl'
make[2]: *** [libs] Error 2
make[2]: Leaving directory `/myHome/checkout/gnome/nss-3.12.6/mozilla/security/nss/lib'
make[1]: *** [libs] Error 2
make[1]: Leaving directory `/myHome/checkout/gnome/nss-3.12.6/mozilla/security/nss'
make: *** [all] Error 2
make
^[[1m*** Error during phase build of nss: ########## Error running make   *** [38/208]^[(B^[[m
^[]0;jhbuild:Error during phase build of nss: ########## Error running make   [38/208]^G
--------------------------------------------------------------------------------------------------------------

Selected: [2] Ignore error and continue to install

--------------------------------------------------------------------------------------------------------------

Now type `make' to compile gnome-desktop
./autogen.sh --prefix /opt/gnome --libdir '/opt/gnome/lib' --with-gnome-distributor=JHBuild --disable-static --disable-gtk-doc
^[[1m*** Building gnome-desktop-3 *** [61/208]^[(B^[[m
^[]0;jhbuild:Building gnome-desktop-3 [61/208]^G  GEN    .gitignore
make  all-recursive
make[1]: Entering directory `/myHome/checkout/gnome/gnome-desktop-3'
Making all in libgnome-desktop
make[2]: Entering directory `/myHome/checkout/gnome/gnome-desktop-3/libgnome-desktop'
  CC     gnome-desktop-utils.lo
  CC     gnome-desktop-thumbnail.lo
  CC     gnome-thumbnail-pixbuf-utils.lo
  CC     gnome-bg.lo
  CC     gnome-bg-crossfade.lo
  CC     display-name.lo
  CC     gnome-rr.lo
gnome-rr.c: In function ‘gnome_rr_screen_initable_init’:
gnome-rr.c:694: warning: unused variable ‘ignore’
gnome-rr.c:693: warning: unused variable ‘event_base’
gnome-rr.c: In function ‘force_timestamp_update’:
gnome-rr.c:952: error: ‘XRRCrtcInfo’ undeclared (first use in this function)
gnome-rr.c:952: error: (Each undeclared identifier is reported only once
gnome-rr.c:952: error: for each function it appears in.)
gnome-rr.c:952: error: ‘current_info’ undeclared (first use in this function)
gnome-rr.c:963: warning: implicit declaration of function ‘XRRGetCrtcInfo’
gnome-rr.c:963: warning: nested extern declaration of ‘XRRGetCrtcInfo’
gnome-rr.c:964: error: ‘ScreenInfo’ has no member named ‘resources’
gnome-rr.c:971: warning: implicit declaration of function ‘XRRSetCrtcConfig’
gnome-rr.c:971: warning: nested extern declaration of ‘XRRSetCrtcConfig’
gnome-rr.c:972: error: ‘ScreenInfo’ has no member named ‘resources’
gnome-rr.c:982: warning: implicit declaration of function ‘XRRFreeCrtcInfo’
gnome-rr.c:982: warning: nested extern declaration of ‘XRRFreeCrtcInfo’
gnome-rr.c:988: error: ‘RRSetConfigSuccess’ undeclared (first use in this function)
make[2]: *** [gnome-rr.lo] Error 1
make[2]: Leaving directory `/myHome/checkout/gnome/gnome-desktop-3/libgnome-desktop'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/myHome/checkout/gnome/gnome-desktop-3' 
make: *** [all] Error 2
make
^[[1m*** Error during phase build of gnome-desktop-3: ########## Error running make   *** [61/208]^[(B^[[m
^[]0;jhbuild:Error during phase build of gnome-desktop-3: ########## Error running make   [61/208]^G
---------------------------------------------------------------------------------------------------------

Can not go beyond this, of course!
Comment 1 Florian Müllner 2011-03-05 14:15:18 UTC
None of this is a gnome-shell issue. Neither NetworkManager nor Mozilla's nss library are GNOME projects, so re-assigning to gnome-desktop for the last issue.
Comment 2 Federico Mena Quintero 2011-03-07 18:44:40 UTC
Created attachment 182745 [details] [review]
bgo#643940 - Don't build some RANDR code if RANDR is not available

Signed-off-by: Federico Mena Quintero <federico@gnome.org>
Comment 3 Federico Mena Quintero 2011-03-07 18:46:51 UTC
Fixed in gnome-desktop master.
Comment 4 Metztli IT 2011-03-29 10:22:53 UTC
As yesterday's (March, 28,2011) build JHBuilder routine calls "make" to compile gnome-desktop, it stops at same

[...fragment...]
 gnome-desktop 3.0.0
              ===================

        prefix:                       /opt/gnome
        exec_prefix:                  ${prefix}
        libdir:                       /opt/gnome/lib
        bindir:                       ${exec_prefix}/bin
        sbindir:                      ${exec_prefix}/sbin
        sysconfdir:                   ${prefix}/etc
        localstatedir:                ${prefix}/var
        datadir:                      ${datarootdir}
        source code location:         .
        compiler:                     gcc
        cflags:                       -g -O2
        Maintainer mode:              yes
        Use *_DISABLE_DEPRECATED:     no

        GNOME Distributor:            JHBuild
        Build desktop-wide docs:      yes
        Date in gnome-version.xml:    yes
        Use external pnp.ids:         no (internal)
        Startup notification support: yes
        XRandr support:               no
        Build gtk-doc documentation:  no


Now type `make' to compile gnome-desktop
./autogen.sh --prefix /opt/gnome --libdir '/opt/gnome/lib' --with-gnome-distributor=JHBuild --disable-static --disable-gtk-doc
^[[1m*** Building gnome-desktop *** [60/205]^[(B^[[m
^[]0;jhbuild:Building gnome-desktop [60/205]^G  GEN    .gitignore
make  all-recursive
make[1]: Entering directory `/myHomeDirectory/checkout/gnome/gnome-desktop'
Making all in libgnome-desktop
make[2]: Entering directory `/myHomeDirectory/checkout/gnome/gnome-desktop/libgnome-desktop'
  CC     gnome-desktop-utils.lo
  CC     gnome-desktop-thumbnail.lo
  CC     gnome-thumbnail-pixbuf-utils.lo
  CC     gnome-bg.lo
  CC     gnome-bg-crossfade.lo
  CC     display-name.lo
  CC     gnome-rr.lo
gnome-rr.c: In function ‘gnome_rr_screen_initable_init’:
gnome-rr.c:694: warning: unused variable ‘ignore’
gnome-rr.c:693: warning: unused variable ‘event_base’
gnome-rr.c: At top level:
gnome-rr.c:1843: warning: ‘crtc_new’ defined but not used
gnome-rr.c:1147: warning: ‘output_new’ defined but not used
gnome-rr.c:1967: warning: ‘mode_new’ defined but not used
gnome-rr.c:201: warning: ‘gnome_rr_output_by_id’ defined but not used
gnome-rr.c:217: warning: ‘crtc_by_id’ defined but not used
gnome-rr.c:234: warning: ‘mode_by_id’ defined but not used
"gnome-desktop-fail.texto" 71L, 3463C written
gnome-rr.c:320: warning: ‘gather_clone_modes’ defined but not used
gnome-rr.c:1196: warning: ‘read_edid_data’ defined but not used
gnome-rr.c:1224: warning: ‘get_connector_type_string’ defined but not used
gnome-rr.c:1647: warning: ‘gnome_rr_rotation_from_xrotation’ defined but not used
gnome-rr.c:1662: warning: ‘xrotation_from_rotation’ defined but not used
  CC     gnome-rr-config.lo
  CC     gnome-rr-output-info.lo      
In file included from gnome-rr-output-info.c:31:
gnome-rr-private.h:38: error: expected specifier-qualifier-list before ‘Display’
make[2]: *** [gnome-rr-output-info.lo] Error 1
make[2]: Leaving directory `/myHomeDirectory/checkout/gnome/gnome-desktop/libgnome-desktop'
make[1]: *** [all-recursive] Error 1  
make[1]: Leaving directory `/myHomeDirectory/checkout/gnome/gnome-desktop'
make: *** [all] Error 2               
make    
^[[1m*** Error during phase build of gnome-desktop: ########## Error running make   *** [60/205]^[(B^[[m
^[]0;jhbuild:Error during phase build of gnome-desktop: ########## Error
Comment 5 Metztli IT 2011-03-29 17:04:50 UTC
Ok, what I meant to write is that the issue status: not RESOLVED
Comment 6 Federico Mena Quintero 2011-03-29 17:11:52 UTC
Created attachment 184608 [details] [review]
bgo#643940 - Include gdkx.h so we can build when RANDR is not available

The RANDR headers include the Xlib paraphernalia, but we don't include those
headers when gnome-desktop is configured to not use RANDR.  So, instead we
include gdkx.h so that we'll have defined types for Display, Screen, etc.

Signed-off-by: Federico Mena Quintero <federico@gnome.org>
Comment 7 Federico Mena Quintero 2011-03-29 17:13:24 UTC
Oops, sorry about that missing "Display".  I've tested this now; it builds fine with the attached patch.

We are in hard code freeze right now, so I'll wait for a few days to push this.
Comment 8 Federico Mena Quintero 2011-03-29 17:14:31 UTC
*** Bug 646116 has been marked as a duplicate of this bug. ***
Comment 9 Matthias Clasen 2011-03-29 17:22:03 UTC
That seems a little backwards. If you need X types, why not include Xlib headers ?
Comment 10 Metztli IT 2011-03-29 17:58:13 UTC
(In reply to comment #9)
> That seems a little backwards. If you need X types, why not include Xlib
> headers ?

In effect, I just modified my relevant file: /myHomeDirectory/checkout/gnome/gnome-desktop/libgnome-desktop/gnome-rr-private.h

by adding the header directive:
 
#include <X11/Xlib.h>

(as noted in Ivaylo Valkov's < http://bugzilla-attachments.gnome.org/attachment.cgi?id=184598 >) And the procedure continued.

We will see how far it progresses :)
Comment 11 Metztli IT 2011-03-29 20:27:05 UTC
Well, on the make install phase, routine bombs again with:

......................................................
./configure: line 3102: syntax error near unexpected token `0.9.9'
./configure: line 3102: `GOBJECT_INTROSPECTION_CHECK(0.9.9)'
./autogen.sh --prefix /opt/gnome --libdir '/opt/gnome/lib'  --disable-static --disable-gtk-doc
^[[1m*** Error during phase configure of upower: ########## Error running ./autogen.sh --prefix /opt/gnome --libdir '/opt/gnome/lib'  --disable-static --disable-gtk-doc  *** [71/205]^[(B^[[m
^[]0;jhbuild:Error during phase configure of upower: ########## Error running ./autogen.sh --prefix /opt/gnome --libdir '/opt/gnome/lib'  --disable-static --disable-gtk-doc  [71/205]^G
..........................................................

Relevant full fragment below:


make[1]: Leaving directory `/myHomeDirectory/checkout/gnome/gnome-settings-daemon/po'
make[1]: Entering directory `/myHomeDirectory/checkout/gnome/gnome-settings-daemon'
make[2]: Entering directory `/myHomeDirectory/checkout/gnome/gnome-settings-daemon'
make[2]: Nothing to be done for `install-exec-am'.
make[2]: Nothing to be done for `install-data-am'.
make[2]: Leaving directory `/myHomeDirectory/checkout/gnome/gnome-settings-daemon'
make[1]: Leaving directory `/myHomeDirectory/checkout/gnome/gnome-settings-daemon'
make install
^[[1m*** Checking out upower *** [71/205]^[(B^[[m
^[]0;jhbuild:Checking out upower [71/205]^GCloning into upower...
Current branch master is up to date.
git clone git://anongit.freedesktop.org/git/upower
git remote set-url origin git://anongit.freedesktop.org/git/upower
git pull --rebase
^[[1m*** Configuring upower *** [71/205]^[(B^[[m
^[]0;jhbuild:Configuring upower [71/205]^GRunning libtoolize...
libtoolize: putting auxiliary files in `.'.
libtoolize: copying file `./ltmain.sh'
libtoolize: putting macros in AC_CONFIG_MACRO_DIR, `m4'.
libtoolize: copying file `m4/libtool.m4'
libtoolize: copying file `m4/ltoptions.m4'
libtoolize: copying file `m4/ltsugar.m4'
libtoolize: copying file `m4/ltversion.m4'
libtoolize: copying file `m4/lt~obsolete.m4'
Running intltoolize ...
Running aclocal -I m4 ...
Running autoheader...
Running automake --add-missing --gnu -Wno-portability  ...
configure.ac:54: installing `./compile'
configure.ac:50: installing `./config.guess'
configure.ac:50: installing `./config.sub'
configure.ac:12: installing `./install-sh'
configure.ac:12: installing `./missing'
libupower-glib/Makefile.am:62: HAVE_INTROSPECTION does not appear in AM_CONDITIONAL
libupower-glib/Makefile.am: installing `./depcomp'
Makefile.am: installing `./INSTALL'
Running autoconf ...
Running ./configure --enable-maintainer-mode --enable-gtk-doc --prefix /opt/gnome --libdir /opt/gnome/lib --disable-static --disable-gtk-doc ...
checking for a BSD-compatible install... /home/mixtecatl/.local/bin/install-check
checking whether build environment is sane... yes
checking for a thread-safe mkdir -p... /bin/mkdir -p
checking for gawk... gawk
checking whether make sets $(MAKE)... yes
checking how to create a ustar tar archive... gnutar
checking whether to disable maintainer-specific portions of Makefiles... yes
./configure: line 3102: syntax error near unexpected token `0.9.9'
./configure: line 3102: `GOBJECT_INTROSPECTION_CHECK(0.9.9)'
./autogen.sh --prefix /opt/gnome --libdir '/opt/gnome/lib'  --disable-static --disable-gtk-doc
^[[1m*** Error during phase configure of upower: ########## Error running ./autogen.sh --prefix /opt/gnome --libdir '/opt/gnome/lib'  --disable-static --disable-gtk-doc  *** [71/205]^[(B^[[m
^[]0;jhbuild:Error during phase configure of upower: ########## Error running ./autogen.sh --prefix /opt/gnome --libdir '/opt/gnome/lib'  --disable-static --disable-gtk-doc  [71/205]^G
  [1] Rerun phase configure
  [2] Ignore error and continue to build
  [3] Give up on module
  [4] Start shell 
  [5] Reload configuration
  [6] Go to phase "wipe directory and start over"
  [7] Go to phase "clean"
  [8] Go to phase "distclean"
-----------------------------------------------------------
Tried again by selecting choice is 1: Rerun phase configure
---------------------------------------------------------

choice: ^[[1m*** Configuring upower *** [71/205]^[(B^[[m
^[]0;jhbuild:Configuring upower [71/205]^GRunning libtoolize...
libtoolize: putting auxiliary files in `.'.
libtoolize: copying file `./ltmain.sh'
libtoolize: putting macros in AC_CONFIG_MACRO_DIR, `m4'.
libtoolize: copying file `m4/libtool.m4'
libtoolize: copying file `m4/ltoptions.m4'
libtoolize: copying file `m4/ltsugar.m4'
libtoolize: copying file `m4/ltversion.m4'
libtoolize: copying file `m4/lt~obsolete.m4'
Running intltoolize ...
Running aclocal -I m4 ...
Running autoheader...
Running automake --add-missing --gnu -Wno-portability  ...
libupower-glib/Makefile.am:62: HAVE_INTROSPECTION does not appear in AM_CONDITIONAL
Running autoconf ...
Running ./configure --enable-maintainer-mode --enable-gtk-doc --prefix /opt/gnome --libdir /opt/gnome/lib --disable-static --disable-gtk-doc ...
checking for a BSD-compatible install... /home/mixtecatl/.local/bin/install-check
checking whether build environment is sane... yes
checking for a thread-safe mkdir -p... /bin/mkdir -p
checking for gawk... gawk
checking whether make sets $(MAKE)... yes
checking how to create a ustar tar archive... gnutar
checking whether to disable maintainer-specific portions of Makefiles... yes
./configure: line 3102: syntax error near unexpected token `0.9.9'
./configure: line 3102: `GOBJECT_INTROSPECTION_CHECK(0.9.9)'
./autogen.sh --prefix /opt/gnome --libdir '/opt/gnome/lib'  --disable-static --disable-gtk-doc
^[[1m*** Error during phase configure of upower: ########## Error running ./autogen.sh --prefix /opt/gnome --libdir '/opt/gnome/lib'  --disable-static --disable-gtk-doc  *** [71/205]^[(B^[[m
^[]0;jhbuild:Error during phase configure of upower: ########## Error running ./autogen.sh --prefix /opt/gnome --libdir '/opt/gnome/lib'  --disable-static --disable-gtk-doc  [71/205]

-------------------------------------------------------------------
Hence on second attemp it fails
-------------------------------------------------------------------
Comment 12 Federico Mena Quintero 2011-03-29 21:44:57 UTC
Created attachment 184634 [details] [review]
bgo#643940 - Include Xlib.h so we can build when RANDR is not available

The RANDR headers include the Xlib paraphernalia, but we don't include those
headers when gnome-desktop is configured to not use RANDR.  So, instead we
include Xlib.h so that we'll have defined types for Display, Screen, etc.

Signed-off-by: Federico Mena Quintero <federico@gnome.org>
Comment 13 Federico Mena Quintero 2011-03-30 18:26:57 UTC
Comment on attachment 184634 [details] [review]
bgo#643940 - Include Xlib.h so we can build when RANDR is not available

Pushed to master.