Don't build some RANDR code if RANDR is not available

Based on gnome-desktop commit: f89d8a582abbb79898a93d26a8c0f52f74b20bd2
From: Federico Mena Quintero <federico@gnome.org>
Gnome bug: https://bugzilla.gnome.org/show_bug.cgi?id=643940